# MarkDown

./: ArmChina人事名单.md  AutoHotKey.ahk  Linux的gcc和g++的区别.md  Linux设备驱动-模块加载过程.md  Question List.md  README  aipugb对应四种模式中的build模式：用于生成aipu.bin（二进制文件）.md  gcc中三个常见的参数.md  linux内核设备树及编译.md  login服务器如何拷贝文件至sh-ai01.md  runtime理解.md  shell if 判断.md  source命令.md  tar命令.md  交叉编译.md  动态链接库与静态链接库.md  后向传播算法.md  固件Firmware.md  增量编译.md  增量编译。.md  多层神经网络.md  学习总结.md  理解一下=、= 、=.md  用 TensorFlow 压缩神经网络.md  编译器与中间表示 LLVM IR, SPIR-V, 以及 MLIR.md  量化.md
Common/: .ini格式文件.md  Group Convolution分组卷积作用.md  IO的五种方式.md  LD链接.md  OneHot独热编码.md  git introduction.md  runtime理解.md  shell if 判断.md  source命令.md  tar命令.md  vim中按下ctrl+s导致shell中断.md  交叉编译.md  动态链接库与静态链接库.md  后向传播算法.md  固件Firmware.md  多层神经网络.md  梯度下降算法.md
Compiler/: CompassIR2MLIR.md  MLIR Dialect.md  MLIR Toy 增加mulOp.md  MLIR Toy增加GenericCallOp.md  MLIRCodeStructure.md  MLIRGenRegister代码解读.md  MLIR与LLVM.md  MLIR如何才会自动生成build函数.md  MLIR自动生成和自定义parse函数.md  Ops.td作用.md  dumpMLIR.md  getOperand和getDefiningOp的含义.md  inc文件作用.md  loadMLIR.md  mlir-tblgen.md  toy_convert_MLIR.md  使用mlir-opt将func和arith的dialect转为llvm dialect.md  如何注册Compass Dialect.md  消除多余Transpose的机制.md  编译LLVM-MLIR得到mlir-tblgen命令.md  编译器与中间表示 LLVM IR, SPIR-V, 以及 MLIR.md
Compiler/mlir/compass2mlir/: CMakeLists.txt  compass2mlir.pro  gen_dialect_op.sh  main.cpp
Compiler/mlir/compass2mlir/include/: AST.h  Lexer.md  Parser.h
Compiler/mlir/test/: dims_begin_end.cpp
